[workspace]
members = [
    "crates/*"
]
resolver = "3"

[workspace.package]
authors = ["Vaiz"]
edition = "2024"
homepage = "https://github.com/Vaiz/nfs3"
repository = "https://github.com/Vaiz/nfs3"
license = "Unlicense"

[workspace.dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
byteorder = "1.5.0"
filetime = "0.2.25"
intaglio = "1.10"
proc-macro2 = "1.0.94"
quote = "1.0.39"
rand = "0.9.0"
syn = "2.0.99"
tokio = { version = "1.44.0", default-features = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
xdr-codec = "0.4.4"
wasmer-vfs = { version = "3.1.1", default-features = false }
