[workspace]
members = [
    "crates/*"
]
resolver = "3"

[workspace.package]
authors = ["Vaiz"]
rust-version = "1.85"
edition = "2024"
homepage = "https://github.com/Vaiz/nfs3"
repository = "https://github.com/Vaiz/nfs3"
license = "Unlicense"

[workspace.dependencies]
anyhow = "1.0.98"
chrono = "0.4"
clap = { version = "4.5", default-features = false }
ctrlc = { version = "3.4" }
filetime = "0.2.25"
intaglio = "1.10"
proc-macro2 = "1.0.95"
quote = "1.0.40"
rand = "0.9.1"
socket2 = "0.6"
smol = "2.0"
syn = "2.0.101"
tokio = { version = "1.44.0", default-features = false }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
wasmer-vfs = { version = "3.1.1", default-features = false }

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
significant_drop_tightening = "allow" # it's too buggy
missing_errors_doc = "allow"
