[package]
name = "cargo-nfs3-server"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false
description = "Simple and easy-to-deploy NFSv3 server"
readme = "README.md"

[dependencies]
nfs3_server = { path = "../nfs3_server", version = "0.8.0", features = ["memfs"] }

clap = { workspace = true, default-features = true, features = ["derive"] }
ctrlc = { workspace = true } 
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["tracing-log"] }
intaglio = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"], default-features = false }

[lints]
workspace = true
