[package]
name = "nfs3_client"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = true
description = "Provides an implementation of NFS3 client"
readme = "README.md"

[features]
tokio = ["dep:tokio"]

[dependencies]
nfs3_types = { path = "../nfs3_types", version = "0.3.0" }

async-trait.workspace = true
rand.workspace = true
tokio = { workspace = true, optional = true, default-features = false, features = ["net", "io-util"] }

[dev-dependencies]
chrono.workspace = true
tokio = { workspace = true, default-features = false, features = ["rt", "macros", "net", "io-util"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "portmap"
required-features = ["tokio"]

[[example]]
name = "nfs"
required-features = ["tokio"]
