[package]
name = "nfs3_client"
version = "0.7.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = true
description = "Provides an implementation of NFS3 client"
readme = "README.md"

[features]
tokio = ["dep:tokio"]
smol = ["dep:smol", "dep:socket2"]

[dependencies]
nfs3_types = { path = "../nfs3_types", version = "0.5.0" }

rand.workspace = true
socket2 = { workspace = true, optional = true }
smol = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, default-features = false, features = ["net", "io-util"] }

[dev-dependencies]
chrono.workspace = true
tokio = { workspace = true, default-features = false, features = ["rt", "macros", "net", "io-util"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[[example]]
name = "portmap"
required-features = ["tokio"]

[[example]]
name = "nfs"
required-features = ["tokio"]

[[example]]
name = "nfs_smol"
required-features = ["smol"]

[[example]]
name = "ls"
required-features = ["tokio"]

[[example]]
name = "download_folder"
required-features = ["tokio"]
