[package]
name = "nfs3_macros"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.96"

[dev-dependencies]
byteorder = "1.5.0"
xdr-codec = "0.4.4"
