[package]
name = "nfs3_server"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors = ["Yucheng Low <ylow@xethub.com>", "Vaiz"]
description = "A Rust NFS Server implementation"
readme = "README.md"
keywords = ["nfs"]
license = "BSD-3-Clause"
categories = ["network-programming", "filesystem"]
publish = true
include = ["src/**/*", "src/*", "Cargo.toml", "LICENSE", "README.md"]

[lib]
doctest = false

[dependencies]
nfs3_types = { path = "../nfs3_types", version = "0.1.0" }

tokio = { workspace = true, features = [ "net", "io-util", "sync", "fs", "rt", "macros" ] }
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
filetime.workspace = true
xdr-codec.workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["tracing-log"] }
intaglio.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread" ], default-features = false }
