[package]
name = "nfs3_tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false # this crate contains only tests

[dependencies]
nfs3_client = { path = "../nfs3_client", version = "0.4.1", features = ["tokio"] }
nfs3_server = { path = "../nfs3_server", version = "0.5.0", features = ["__test_reexports", "memfs"] }
nfs3_types = { path = "../nfs3_types", version = "0.3.3" }

anyhow.workspace = true
intaglio.workspace = true
tokio = { workspace = true, default-features = false, features = ["rt", "sync", "io-util"] }
tracing.workspace = true
tracing-subscriber.workspace = true
wasmer-vfs = { workspace = true, default-features = false, features = ["mem-fs"] }
