[package]
name = "nfs3_tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false # this crate contains only tests

[dependencies]
nfs3_client = { workspace = true, features = ["tokio"] }
nfs3_server = { workspace = true, features = ["__test_reexports", "memfs"] }

anyhow.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "io-util", "rt-multi-thread"], default-features = false }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints.clippy]
collapsible_if = "allow"
