[package]
name = "nfs3_types"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "Type definitions and utilities for working with NFSv3"
readme = "README.md"
keywords = ["xdr", "rfc1014", "nfs", "nfs3", "rfc1813"]

[dependencies]
nfs3_macros = { path = "../nfs3_macros", version = "0.2.0" }

byteorder.workspace = true
xdr-codec.workspace = true

[package.metadata.cargo-machete]
ignored = ["byteorder"]
