[package]
name = "nfs3_types"
version = "0.4.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "Type definitions and utilities for working with NFSv3"
readme = "README.md"
keywords = ["xdr", "rfc1014", "nfs", "nfs3", "rfc1813"]

[dependencies]
nfs3_macros.workspace = true

[package.metadata.cargo-machete]
ignored = ["byteorder"]

[lints]
workspace = true
